--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Methods for Adding CSS</title>
-</head>
-<body>
-  <div>Style me via the external method!</div>
-  <p>I would like to be styled with the internal method, please.</p>
-  <button>Inline Method</button>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Methods for Adding CSS</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Ubuntu:400,700");
+    </style>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      body {
+        font-family: "Ubuntu", sans-serif;
+      }
+
+      p {
+        background-color: green;
+        color: white;
+        font-size: 18px;
+      }
+    </style>
+  </head>
+  <body>
+    <div>Style me via the external method!</div>
+    <p>I would like to be styled with the internal method, please.</p>
+    <button
+      style="background-color: orange; font-size: 18px; font-family: inherit"
+    >
+      Inline Method
+    </button>
+  </body>
 </html>
